【新版本】M.3.1 发布

--- a/本项目的开发文档/本项目的核心算法.md
+++ b/本项目的开发文档/本项目的核心算法.md
@@ -176,6 +176,12 @@
    * 与原来的 Spring Bean 相联系：为了能方便做到这一点，可以让这个 Linker 对象也成为一个 Spring Bean，然后利用基于注解的依赖注入即可。
    * 与其中一个 JavaFX 组件相绑定：一个 JavaFX 可以使用一个 Java controller 类作为控制外壳，可以让这个 controller 类从 Spring 容器中获得这个 Linker对象，然后与之绑定。
 
+# 特殊设计
+
+## 将 Map 当做 Redis 数据库来使用
+
+&emsp;&emsp;将一个 Map 作为全局变量给出，这样一来，一个地方的对象可以向这个 Map 对象存放一些数据，另一个对象可以通过键值取出该数据。
+
 # 旧算法
 
 ## 操作数运算算法（旧版本 M.1.1）
