--- a/本项目的开发文档/本项目的架构简介.md
+++ b/本项目的开发文档/本项目的架构简介.md
@@ -26,6 +26,8 @@
   - 用于实现多级控制器，完成视图与服务之间的通信与解耦
 * 适配器模式：
   - 用于解决 JavaFX 技术与 Spring 技术不相容的问题
+* 单例模式：
+  * 用于保证全局“懒加载”变量的线程安全
 * 中介者模式：
   - 用于实现主界面中各组件之间的通信与解耦
 * 观察者模式：
@@ -36,6 +38,8 @@
 * 组合模式：
 
   + 将运算符、操作数归一化
+* 原型模式：
+  * 用于实现多种操作数等的复制问题
 * 工厂模式：
 
   + 用于异常类的创建
