【新版本】M.3.2 发布

--- a/本项目的开发文档/本项目的核心算法.md
+++ b/本项目的开发文档/本项目的核心算法.md
@@ -4,9 +4,9 @@
 
 <div align='center' ><font size='70'>本项目的核心算法</font></div>
 
-<p align="right">（版本 M.3.0）</p>
+<p align="right">（版本 M.3.2）</p>
 
-<p align="right">——2021年9月26日</p>
+<p align="right">——2021年10月3日</p>
 
 # 操作数运算算法
 
@@ -165,7 +165,17 @@
 
    答：本项目中的控制器还承担了路由选择的工作，而对于一般的 MVC 项目，此工作是由网络中的各级路由器与 Tomcat 服务器来共同完成的。因此，如果将本项目应用于一般的 MVC 项目，只需要保留本项目中信息向下传递的机制，而去掉信息向上传递的机制即可。
 
-# JavaFX 与 Spring 适配
+# 创新设计
+
+## 将 Map 当做 Redis 数据库来使用
+
+&emsp;&emsp;将一个 Map 作为全局变量给出，这样一来，一个地方的对象可以向这个 Map 对象存放一些数据，另一个对象可以通过键值取出该数据。
+
+## 懒执行
+
+&emsp;&emsp;将所有的除 UI 界面的初始化操作放到一个新建线程里执行，这样就能大大提高应用（UI）的启动时间，改善了用户体验。
+
+## JavaFX 与 Spring 适配
 
 &emsp;&emsp;Spring 是通过 XML 文件来利用普通的 Java 类，而 JavaFX 也正好类似，但这正是它们不相容的原因。包含它们数据的 XML 文件之间肯定是不能直接通信的，但它们利用的 Java 类只是一个光有算法的空壳，外界也无法通过这个 Java 类来直接与它们进行通信，因此令 JavaFX 与 Spring 使用同一个 Java 类也无法综合它们的长处，只会让这个类的职责过重。因此，只能让 JavaFX 与 Spring 分别使用不同的类，然后让它们建立连接。具体算法如下：
 
@@ -176,11 +186,9 @@
    * 与原来的 Spring Bean 相联系：为了能方便做到这一点，可以让这个 Linker 对象也成为一个 Spring Bean，然后利用基于注解的依赖注入即可。
    * 与其中一个 JavaFX 组件相绑定：一个 JavaFX 可以使用一个 Java controller 类作为控制外壳，可以让这个 controller 类从 Spring 容器中获得这个 Linker对象，然后与之绑定。
 
-# 特殊设计
+## 使用 URL 来方便地进行各 UI 组件的之间的交互
 
-## 将 Map 当做 Redis 数据库来使用
-
-&emsp;&emsp;将一个 Map 作为全局变量给出，这样一来，一个地方的对象可以向这个 Map 对象存放一些数据，另一个对象可以通过键值取出该数据。
+&emsp;&emsp;在前端框架中（如 React），一般使用 props 等来实现父组件与子组件之间的通信。但在 JavaFX 中，FXML 没有提供这种功能。这里由于实现了 URL 控制器与 Linker，因此各组件可以互相使用 URL 来直接进行跨级调用，而且可以通过控制对 URL 解析来自由决定对外开放的方法。
 
 # 旧算法
 
