【新版本】M.3.2.2 发布

--- a/本项目的开发文档/本项目的架构简介.md
+++ b/本项目的开发文档/本项目的架构简介.md
@@ -4,19 +4,21 @@
 
 <p align="right">（版本 M.3.0）</p>
 
-<p align="right">——2021年9月27日</p>
+<p align="right">——2021年10月9日</p>
 
 # 架构模式
 
 &emsp;&emsp;本项目采用了架构模式 MVC。具体来说，项目分为以下几个部分：
-
-![](architecture_introduction_md_img/architecture_diagram.png)
 
 * V：提供计算器各组件及主界面的实现
 * M：提供运算符、操作数等的底层实现
 * DAO：提供对 M 的一些常规处理与封装
 * Service：借助 DAO，对从 V 中传来的数据进行处理并反馈
 * C：用于实现 V 与 S 之间的通信与解耦
+
+![](architecture_introduction_md_img/architecture_diagram.png)
+
+&emsp;&emsp;图中本项目的各个组件之间使用 URL 来进行通信。其中，URL 遵循 RESTful 规范，格式为 `/组件路径/操作或数据名`，如 `/view/inputBox/leftShift` 代表向前端的组件 `inputBox` 来发送 `leftShift` 信息、`/service/expression` 代表向后端发送 `expression` 信息。
 
 # 设计模式
 
@@ -27,26 +29,24 @@
 * 适配器模式：
   - 用于解决 JavaFX 技术与 Spring 技术不相容的问题
 * 单例模式：
-  * 用于保证全局“懒加载”变量的线程安全
+  - 用于保证全局“懒加载”变量的线程安全
 * 中介者模式：
   - 用于实现主界面中各组件之间的通信与解耦
 * 观察者模式：
   - 提供实时计算与计算过程实时显示的功能
 * 解释器模式：
-
-  + 提供表达式解析的功能
+  - 提供表达式解析的功能
 * 组合模式：
-
-  + 将运算符、操作数归一化
+  - 将运算符、操作数归一化
+* 装饰模式：
+  - 用于增强系统默认提供的 UI 组件
 * 原型模式：
-  * 用于实现多种操作数等的复制问题
+  - 用于实现多种操作数等的复制问题
 * 工厂模式：
-
-  + 用于异常类的创建
-  + 用于各组件等的创建【版本 M.2.0 起废弃，改用 Spring 进行依赖注入与初始化】
+  - 用于异常类的创建
+  - 用于各组件等的创建【版本 M.2.0 起废弃，改用 Spring 进行依赖注入与初始化】
 * 模板方法模式：
-
-  + 提供协变运算方法的具体与抽象【版本 M.1.2 起废弃】
+  - 提供协变运算方法的具体与抽象【版本 M.1.2 起废弃】
 
 # 模块介绍
 
@@ -70,29 +70,5 @@
 
 &emsp;&emsp;本项目的程序运行入口为：
 
->  模块 `calculator-core` 中的
->
-> > 包`org.wangpai.calculator`中的
-> >
-> > > 类 `CalculatorApplication` 中的
-> > >
-> > > > 静态方法 `main`
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+> 见本项目根路径下的文档 `README.md`。
 
