--- a/本项目的开发文档/本项目的核心算法.md
+++ b/本项目的开发文档/本项目的核心算法.md
@@ -6,7 +6,7 @@
 
 <p align="right">（版本 M.3.2）</p>
 
-<p align="right">——2021年10月3日</p>
+<p align="right">——2021年10月9日</p>
 
 # 操作数运算算法
 
@@ -188,7 +188,9 @@
 
 ## 使用 URL 来方便地进行各 UI 组件的之间的交互
 
-&emsp;&emsp;在前端框架中（如 React），一般使用 props 等来实现父组件与子组件之间的通信。但在 JavaFX 中，FXML 没有提供这种功能。这里由于实现了 URL 控制器与 Linker，因此各组件可以互相使用 URL 来直接进行跨级调用，而且可以通过控制对 URL 解析来自由决定对外开放的方法。
+&emsp;&emsp;在前端框架中（如 React），一般使用 props 等来实现父组件与子组件之间的通信。但在 JavaFX 中，FXML 没有提供这种功能。这里由于实现了 URL 控制器与 Linker，因此各组件可以互相使用 URL 来直接进行跨级调用，而且可以通过控制对 URL 解析来自由决定对外开放的方法。其中，URL 遵循 RESTful 规范。
+
+&emsp;&emsp;借助于本项目的 `通信算法`，可以做到任意 UI 语言中任意组件之间的通信，而与该 UI 语言有没有提供组件间的通信机制无关。
 
 # 旧算法
 
