【新版本】M.3.3 发布

--- a/本项目的开发文档/本项目的核心算法.md
+++ b/本项目的开发文档/本项目的核心算法.md
@@ -101,14 +101,14 @@
 5. 如果输入字符为数字或小数点，将其加入`操作数缓存栈`，然后本次算法结束。如果不是，进行下一步。
 6. 运行到此时，说明输入字符为普通的运算符，那么就将`操作数缓存栈`中的数加载到`操作数栈`、`计算表达式栈`。然后进行下一步。
 7. 如果`运算符栈`为空，将上面输入的运算符加入`运算符栈`、`计算表达式栈`、`表达式栈`，然后本次算法结束。如果不是，进行下一步。
-8. 比较上面输入的运算符与`运算符栈`栈顶的运算符的优先级。根据优先级的比较结果来进行相应的操作，然后本次算法结束。其中，如果优先级的比较结果为：
+8. 比较上面输入的运算符与`运算符栈`栈顶的运算符的优先级。根据优先级的比较结果来进行相应的操作，然后进行下一次循环。其中，如果优先级的比较结果为：
    * 小于：将上面输入的运算符加入`运算符栈`、`计算表达式栈`、`表达式栈`。
    * 等于：这说明最近的两个运算符是一对括号，且此对括号中就只包含一个操作数。因此，需要将左括号从`计算表达式栈`、`表达式栈弹出`。
    * 大于：
      1. 从`运算符栈`中弹出一个提供运算的运算符，从操作数中弹出两个操作数，从`计算表达式`栈弹出三个元素。然后根据弹出的元素进行计算，并进行下一步。
      2. 如果计算中没有发生异常，进行下一步。如果发生异常，就反馈`动态检查`结果失败，然后本次算法结束。
      3. 将运算结果保存至`操作数栈`、`计算表达式栈`，然后将本次输入的运算符退回输出流，进行下一步。
-     4. 将`计算表达式栈`、输出流的内容拼接输出，然后本算法结束。
+     4. 将`计算表达式栈`、输出流的内容拼接输出。
 
 # 通信算法
 
