【新版本】M.3.4 发布

--- a/本项目的开发文档/本项目的架构简介.md
+++ b/本项目的开发文档/本项目的架构简介.md
@@ -2,9 +2,9 @@
 
 <div align='center' ><font size='70'>本项目的架构简介</font></div>
 
-<p align="right">（版本 M.3.0）</p>
+<p align="right">（版本 M.3.3）</p>
 
-<p align="right">——2021年10月9日</p>
+<p align="right">——2021年10月21日</p>
 
 # 架构模式
 
@@ -18,7 +18,7 @@
 
 ![](architecture_introduction_md_img/architecture_diagram.png)
 
-&emsp;&emsp;图中本项目的各个组件之间使用 URL 来进行通信。其中，URL 遵循 RESTful 规范，格式为 `/组件路径/操作或数据名`，如 `/view/inputBox/leftShift` 代表向前端的组件 `inputBox` 来发送 `leftShift` 信息、`/service/expression` 代表向后端发送 `expression` 信息。
+&emsp;&emsp;图中本项目的各个组件之间使用 URL 来进行通信，对 RPC 技术进行了模拟。其中，URL 遵循 RESTful 规范，格式为 `/组件路径/操作或数据名`，如 `/view/inputBox/leftShift` 代表向前端的组件 `inputBox` 来发送 `leftShift` 信息、`/service/expression` 代表向后端发送 `expression` 信息。
 
 # 设计模式
 
@@ -48,22 +48,36 @@
 * 模板方法模式：
   - 提供协变运算方法的具体与抽象【版本 M.1.2 起废弃】
 
+# 除上述外，还使用了哪些技术关键词
+
+* JavaFX
+* Spring
+* Java 多线程
+* Maven
+* JUnit5
+* Lombok
+* SLF4J、Log4j
+* CSS
+* FXML（HTML、XML）
+* Java Swing（版本 M.3.0 起废弃）
+
 # 模块介绍
 
 &emsp;&emsp;本项目包含以下模块：
 
-* calculator-entrance：存放计算器的启动程序入口。
-* calculator-exception：本项目需要使用的各种异常。
+* calculator-entrance：存放计算器的启动程序入口
+* calculator-exception：本项目需要使用的各种异常
 * calculator-ui：计算器的 UI 界面
+* calculator-ui-depended：此模块源自模块 `calculator-ui`。为了解决 Maven 模块间的循环依赖问题才分离出该模块
 * calculator-backend：计算器的后端程序
 
 # 包名介绍
 
-&emsp;&emsp;本项目中的包名（省略前缀 org.wangpai.calculator）controller、model、service、view、exception 分别对应于上面提到的控制器、模型、服务、视图、异常。
+&emsp;&emsp;本项目中的包名（省略前缀 `org.wangpai.calculator`）controller、model、service、view、exception 分别对应于上面提到的控制器、模型、服务、视图、异常。
 
 # 测试
 
-* 本项目中的测试的类包名后缀如果为某测试框架的框架名，则表明该测试类在测试时使用了该测试框架。如后缀为 junit5，代表该测试类使用了测试框架 JUnit5 。
+* 本项目中的测试的类包名后缀如果为某测试框架的框架名，则表明该测试类在测试时使用了该测试框架。如后缀为 `junit5`，代表该测试类使用了测试框架 JUnit5 。
 * 如果包名后缀不为任何测试框架的框架名，而完全与被测试类的包名一致，则意味着被测试类往往为 GUI 组件，不方便使用测试框架进行测试。这种类的测试往往依靠手动运行来完成。
 
 # 程序运行入口
