--- a/本项目的开发文档/本项目的核心算法.md
+++ b/本项目的开发文档/本项目的核心算法.md
@@ -165,7 +165,7 @@
 
    答：本项目中的控制器还承担了路由选择的工作，而对于一般的 MVC 项目，此工作是由网络中的各级路由器与 Tomcat 服务器来共同完成的。因此，如果将本项目应用于一般的 MVC 项目，只需要保留本项目中信息向下传递的机制，而去掉信息向上传递的机制即可。
 
-# 创新设计
+# 独出心裁的设计
 
 ## 将 Map 当做 Redis 数据库来使用
 
